# code-coverage-demo

./: CMakeLists.txt  README.md  build_all.sh
demo/: demo.cpp
src/: CMakeLists.txt  stream.hpp
src/encoding/: legendre.cpp  legendre.hpp
unittests/: CMakeLists.txt  doctest-helpers.hpp  legendre_test.cpp  stream_test.cpp
